build_forge.log

> Configure project :fabric
Fabric Loom: 1.5.8

> Task :common:compileJava UP-TO-DATE

> Task :forge:compileJava FAILED
/home/az/project/BusinessCraft/forge/src/main/java/com/quackers29/businesscraft/forge/BusinessCraftForge.java:75: error: cannot find symbol
    public static final com.quackers29.businesscraft.api.ITouristHelper TOURIST_HELPER = new ForgeTouristHelper();
                                                                                             ^
  symbol:   class ForgeTouristHelper
  location: class BusinessCraftForge
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
1 error

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':forge:compileJava'.
> Compilation failed; see the compiler error output for details.

* Try:
> Run with --info option to get more log output.
> Run with --scan to get full insights.

Deprecated Gradle features were used in this build, making it incompatible with Gradle 9.0.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/8.8/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 2s
2 actionable tasks: 1 executed, 1 up-to-date
